// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visible When Rule system success 1`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 3120,
          "label": "Movie",
        },
        Object {
          "count": 521,
          "label": "Episode",
        },
        Object {
          "count": 473,
          "label": "Series",
        },
        Object {
          "count": 48,
          "label": "Game",
        },
      ],
      "identifier": "type",
      "label": "Type",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Visible When Rule system success 2`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 3120,
          "label": "Movie",
        },
        Object {
          "count": 521,
          "label": "Episode",
        },
        Object {
          "count": 473,
          "label": "Series",
        },
        Object {
          "count": 48,
          "label": "Game",
        },
      ],
      "identifier": "type",
      "label": "Type",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "override",
      "entries": Array [
        Object {
          "count": 83,
          "label": "J.J. Abrams",
        },
        Object {
          "count": 74,
          "label": "Jeffrey Lieber",
        },
        Object {
          "count": 73,
          "label": "Damon Lindelof",
        },
        Object {
          "count": 53,
          "label": "James Manos Jr.",
        },
        Object {
          "count": 53,
          "label": "Jeff Lindsay",
        },
      ],
      "identifier": "writers",
      "label": "Writers",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 73,
          "label": "Naveen Andrews",
        },
        Object {
          "count": 56,
          "label": "Jennifer Carpenter",
        },
        Object {
          "count": 56,
          "label": "Michael C. Hall",
        },
        Object {
          "count": 53,
          "label": "Emilie de Ravin",
        },
        Object {
          "count": 42,
          "label": "Jared Padalecki",
        },
      ],
      "identifier": "actors",
      "label": "Actors",
      "type": "RefinementSelectFacet",
    },
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 2529,
          "label": "Drama",
        },
        Object {
          "count": 1274,
          "label": "Comedy",
        },
        Object {
          "count": 786,
          "label": "Crime",
        },
        Object {
          "count": 725,
          "label": "Action",
        },
        Object {
          "count": 666,
          "label": "Adventure",
        },
      ],
      "identifier": "genres",
      "label": "Genres",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "ListFacet",
        "id": "type_Movie",
        "identifier": "type",
        "label": "Type",
        "type": "ValueSelectedFilter",
        "value": "Movie",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;

exports[`Visible When Rule system success 3`] = `
Object {
  "facets": Array [
    Object {
      "display": "ListFacet",
      "entries": Array [
        Object {
          "count": 3120,
          "label": "Movie",
        },
        Object {
          "count": 521,
          "label": "Episode",
        },
        Object {
          "count": 473,
          "label": "Series",
        },
        Object {
          "count": 48,
          "label": "Game",
        },
      ],
      "identifier": "type",
      "label": "Type",
      "type": "RefinementSelectFacet",
    },
  ],
  "hits": Object {
    "items": Array [],
    "page": Object {
      "from": 0,
      "pageNumber": NaN,
      "size": 0,
      "total": 4162,
      "totalPages": Infinity,
    },
  },
  "sortedBy": undefined,
  "summary": Object {
    "appliedFilters": Array [
      Object {
        "display": "ListFacet",
        "id": "type_Movie",
        "identifier": "type",
        "label": "Type",
        "type": "ValueSelectedFilter",
        "value": "Movie",
      },
    ],
    "disabledFilters": Array [],
    "query": "",
    "sortOptions": Array [],
    "total": 4162,
  },
}
`;
